Fixed spacing issues and added text wrapping

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -29,6 +29,7 @@ img {
 .header {
   display: flex;
   justify-content: center;
+  margin-bottom: 32px;
 }
 
 .body {
@@ -43,6 +44,14 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 200px;
+  flex-wrap: wrap;
+}
+
+.body-one,
+.body-two,
+.body-three {
+  margin-right: 52px;
 }
 
 .text {
